# triathlon-coach

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  streamlit_app.py
config/: ollama_models.txt
docker/: Dockerfile.app  Dockerfile.ollama
guide/: setup_project.sh
src/agents/: base_agent.py  coach_agent.py  standalone_crew.py
src/api/: main.py
src/llm/: ollama_handler.py
src/utils/: logger.py
tests/: test_api.py
