[project]
name = "triathlon-coach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.5.1",
    "crewai>=1.14.6",
    "crewai-tools>=1.14.6",
    "fastapi>=0.136.3",
    "flake8>=7.3.0",
    "garminconnect>=0.3.3",
    "httpx>=0.28.1",
    "ipython>=9.14.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.2",
    "langchain-ollama>=1.1.0",
    "loguru>=0.7.3",
    "mcp>=1.26.0",
    "mypy>=2.1.0",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.10.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.1.0",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "stravalib>=2.5.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.48.0",
]
